--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
     <div>
         <h1>Time</h1>
     </div>
-    <div id="hours" class="col-4">
+    <div class="row">
+        <div id="hours" class="col-4 timer">
 
-        00
+            00
 
-    </div>
-    <div id="minutes" class="col-4">
+        </div>
+        <div id="minutes" class="col-4">
 
-        00
+            00
 
-    </div>
-    <div id="seconds" class="col-4">
+        </div>
+        <div id="seconds" class="col-4">
 
-        00
+            00
 
+        </div>
     </div>
 
 
