--- a/index.html
+++ b/index.html
@@ -12,27 +12,19 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 
-<body>
-    <div>
+<body class="d-flex justify-content-center align-items-center">
+	<div class="container">
+    <div class="row">
         <h1>Time</h1>
     </div>
     <div class="row">
-        <div id="hours" class="col-4 timer">
+        <div id="hours" class="col">00</div>
+        <div id="minutes" class="col">00</div>
+        <div id="seconds" class="col">
 
-            00
-
-        </div>
-        <div id="minutes" class="col-4">
-
-            00
-
-        </div>
-        <div id="seconds" class="col-4">
-
-            00
-
-        </div>
+            00</div>
     </div>
+		</div>
 
 
 
